new changes(add dynamic route for images to find image when we serve sub-projects in shell project)

--- a/angular.json
+++ b/angular.json
@@ -456,16 +456,11 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "projects/tatto/public",
-                "output": "."
-              },
-              {
-                "glob": "**/*",
                 "input": "projects/tatto/src/assets",
                 "output": "assets"
               },
-              "projects/tatto/src/favicon.ico",
-  "projects/tatto/src/assets"
+"projects/tatto/src/assets",
+    "projects/tatto/src/favicon.ico"
             ],
             "styles": [
               "node_modules/primeflex/primeflex.css",
